用户个人信息的头像展示

--- a/src/assets/css/costom.css
+++ b/src/assets/css/costom.css
@@ -30,9 +30,9 @@ ul {
 .crud-content {
   background: #FFF;
   margin-top: 10px;
-  padding-top: 10px;
   border-radius: 3px;
-  padding-bottom: 5px;
+  padding: 10px 5px 3px 5px;
+
 }
 
 /*表单项*/
